--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
       <version>4.6.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.4</version>
+    </dependency>
   </dependencies>
 
   <build>
